--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ progress {
 .img-fluid {
 /*   max-width: 100%;
   height: auto; */
-  float: left;
+  float: right;
   width:  300px;
   height: 400px;
   object-fit: cover;
