--- a/css/styles.css
+++ b/css/styles.css
@@ -598,11 +598,11 @@ progress {
 }
 
 .img-fluid {
-/*   max-width: 100%;
+  /*   max-width: 100%;
   height: auto; */
-  float: right;
-  width:  100px;
-  height: 50px;
+  display: flex;
+  width:  200px;
+  height: 70px;
   object-fit: fit;
 }
 
